--- a/DocTok/ClientApp/package.json
+++ b/DocTok/ClientApp/package.json
@@ -3,18 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^5.1.3",
+    "@tinymce/tinymce-react": "^4.3.0",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.8",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
+    "bootstrap": "^5.2.3",
+    "bootstrap-multiselect": "^1.1.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.7",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
     "merge": "^2.1.1",
     "oidc-client": "^1.11.5",
+    "ramda": "^0.29.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.1.0",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-swal": "^4.0.0",
     "reactstrap": "^9.0.2",
     "rimraf": "^3.0.2",
+    "sweetalert2": "^11.7.10",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.3",
     "workbox-broadcast-update": "^6.5.3",
@@ -39,7 +52,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "nan": "^2.15.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.9.5"
   },
   "overrides": {
     "autoprefixer": "10.4.5"
