--- a/DocTok/ClientApp/package.json
+++ b/DocTok/ClientApp/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "nan": "^2.15.0",
+    "sass": "^1.67.0",
     "typescript": "^4.9.5"
   },
   "overrides": {
