--- a/DocTok/ClientApp/package.json
+++ b/DocTok/ClientApp/package.json
@@ -2,12 +2,14 @@
   "name": "doctok",
   "version": "0.1.0",
   "private": true,
+  "proxy":"https://localhost:7048",
   "dependencies": {
     "@tinymce/tinymce-react": "^4.3.0",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.8",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
+    "axios": "^1.5.0",
     "bootstrap": "^5.2.3",
     "bootstrap-multiselect": "^1.1.0",
     "date-fns": "^2.30.0",
