--- a/DocTok.Dependencies/DocTok.Dependencies.csproj
+++ b/DocTok.Dependencies/DocTok.Dependencies.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DocTok.BusinessLayer\DocTok.BusinessLayer.csproj" />
+    <ProjectReference Include="..\DocTok.DataAccess\DocTok.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
