Создание первой миграции. Инициализации таблиц в БД

--- a/DocTok/appsettings.json
+++ b/DocTok/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "localDb": "Server=LAPTOP-2C4L25OT;DataBase=DocTok_test;User id=admin; Password=fkj73hgV$; Integrated Security=False;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  }
 }
