Интеграция axios в проект. Добавление сервисов в клиентскую часть приложения. Разработка моделей. Разработка запросов в БД

--- a/DocTok.Shared/DocTok.Shared.csproj
+++ b/DocTok.Shared/DocTok.Shared.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Folder Include="RequestModels\" />
-    <Folder Include="ResponseModels\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
   <ItemGroup>
