--- a/DocTok/ClientApp/package.json
+++ b/DocTok/ClientApp/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.17",
+    "@mui/x-data-grid": "^6.18.1",
     "@tinymce/tinymce-react": "^4.3.0",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.8",
