--- a/DocTok/appsettings.json
+++ b/DocTok/appsettings.json
@@ -1,13 +1,19 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
+    }
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "localDb": "Server=LAPTOP-2C4L25OT;DataBase=DocTok_test;User id=admin; Password=fkj73hgV$; Integrated Security=False;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-  }
+  },
+  "JWTSettings": {
+    "securityKey": "CodeMazeSecretKey",
+    "validIssuer": "CodeMazeAPI",
+    "validAudience": "https://localhost:44416",
+    "expiryInMinutes": 5
+  },
 }
