Настройка axios. Переработка сервисов и контейнеров. Интеграция MUI

--- a/DocTok/appsettings.json
+++ b/DocTok/appsettings.json
@@ -11,8 +11,8 @@
     "localDb": "Server=LAPTOP-2C4L25OT;DataBase=DocTok_test;User id=admin; Password=fkj73hgV$; Integrated Security=False;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "JWTSettings": {
-    "securityKey": "CodeMazeSecretKey",
-    "validIssuer": "CodeMazeAPI",
+    "securityKey": "DocTokSecretKey",
+    "validIssuer": "DocTokAPI",
     "validAudience": "https://localhost:44416",
     "expiryInMinutes": 5
   },
