--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,3 +10,4 @@ services:
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+    restart: always 
